# alpe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/alpe-api/: CHANGELOG.md  Cargo.toml
crates/alpe-api/src/: lib.rs
crates/alpe-auth/: CHANGELOG.md  Cargo.toml
crates/alpe-auth/src/: extractor.rs  jwt.rs  lib.rs  rbac.rs
crates/alpe-cli/: CHANGELOG.md  Cargo.toml
crates/alpe-cli/src/: main.rs
crates/alpe-core/: CHANGELOG.md  Cargo.toml
crates/alpe-core/src/: error.rs  jurisdiction.rs  lib.rs  plan.rs  project.rs  resource.rs  validation.rs
crates/alpe-db/: Cargo.toml
crates/alpe-db/migrations/: 001_users.sql  002_projects.sql  003_audit_log.sql
crates/alpe-db/src/: error.rs  lib.rs  project.rs
crates/alpe-db/tests/: project_repository.rs
crates/alpe-operator-app/: Cargo.toml
crates/alpe-operator-app/src/: lib.rs
crates/alpe-operator-db/: Cargo.toml
crates/alpe-operator-db/src/: lib.rs
crates/alpe-operator-storage/: Cargo.toml
crates/alpe-operator-storage/src/: lib.rs
crates/alpe-sdk/: Cargo.toml
crates/alpe-sdk/src/: lib.rs
crates/alpe-substrate/: Cargo.toml
crates/alpe-substrate/src/: lib.rs
crates/alpe-test/: Cargo.toml
crates/alpe-test/src/: lib.rs
