[workspace]
members = [
    "crates/alpe-core",
    "crates/alpe-api",
    "crates/alpe-auth",
    "crates/alpe-cli",
    "crates/alpe-sdk",
    "crates/alpe-test",
    "crates/alpe-operator-db",
    "crates/alpe-operator-storage",
    "crates/alpe-operator-app",
    "crates/alpe-substrate",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Alpe Cloud <team@alpe.dev>"]
license = "Apache-2.0"
repository = "https://github.com/alpe-cloud/alpe"
rust-version = "1.88.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Authentication
jsonwebtoken = "10.3.0"
argon2 = "0.5.3"

# CLI
clap = { version = "4.6.0", features = ["derive", "env"] }
indicatif = "0.18.4"
comfy-table = "7.2.2"
dialoguer = "0.12.0"

# Kubernetes
kube = { version = "3.1.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }

# API documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }

# Utilities
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.0"
dirs = "6.0.0"

# Internal crates (path for local dev, version for crates.io publishing)
alpe-core = { path = "crates/alpe-core", version = "0.1.0" }
alpe-auth = { path = "crates/alpe-auth", version = "0.1.0" }
alpe-sdk = { path = "crates/alpe-sdk", version = "0.1.0" }

# Testing
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
