[package]
name = "alpe-auth"
description = "JWT authentication, password hashing, and RBAC policy for the Alpe platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alpe-core = { path = "../alpe-core" }
argon2 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
