[package]
name = "alpe-core"
description = "Core domain types, error hierarchy, and pure business logic for the Alpe platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
db = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
