[package]
name = "alpe-db"
description = "Database migrations, connection pooling, and repository layer for the Alpe platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alpe-core = { workspace = true, features = ["db"] }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
alpe-test = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
